fix select dropdown text alignment

--- a/prototype/public/layouts/dashboard/_toolbar.scss
+++ b/prototype/public/layouts/dashboard/_toolbar.scss
@@ -265,6 +265,7 @@ $dashboard-toolbar-separator: 1px solid $c-grey-400;
     margin-left: 7px;
     margin: 2px;
     padding-bottom: 1px;
+    margin-top: 1px;
 }
 
 .dashboard-toolbar__dropdown-select-text {
